[gd_scene load_steps=4 format=3 uid="uid://qa8dpyfm67kt"]

[ext_resource type="Script" path="res://Source/UI/main_menu.gd" id="1_olish"]
[ext_resource type="Texture2D" uid="uid://dcwsynhquxgbk" path="res://Assets/main menu/main menu with effects.svg" id="2_a2x2q"]
[ext_resource type="Texture2D" uid="uid://dp8hs7hnh1u8k" path="res://Assets/main menu/main menu without effects.svg" id="6_lw7eg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_olish")

[node name="BackgroundHovered" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a2x2q")
expand_mode = 1

[node name="BackgroundNormal" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_lw7eg")
expand_mode = 1

[node name="PlayButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 232.0
offset_top = 152.0
offset_right = 432.0
offset_bottom = 208.0
scale = Vector2(2.50885, 3.94543)
flat = true

[node name="HowToButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 64.0
offset_top = 24.0
offset_right = 264.0
offset_bottom = 80.0
scale = Vector2(1.22885, 1.94543)
flat = true

[node name="QuitButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 688.0
offset_top = 408.0
offset_right = 888.0
offset_bottom = 464.0
scale = Vector2(1.22885, 1.94543)
flat = true

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="HowToButton" to="." method="_on_how_to_button_mouse_entered"]
[connection signal="mouse_exited" from="HowToButton" to="." method="_on_how_to_button_mouse_exited"]
[connection signal="pressed" from="HowToButton" to="." method="_on_how_to_button_pressed"]
[connection signal="mouse_entered" from="QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="QuitButton" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
